WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
151699
REGRESSION(
r192834
): [GTK] Test /webkit2/WebKitWebView/editor-state/typing-attributes times out after
r192834
https://bugs.webkit.org/show_bug.cgi?id=151699
Summary
REGRESSION(r192834): [GTK] Test /webkit2/WebKitWebView/editor-state/typing-at...
Carlos Garcia Campos
Reported
2015-12-01 01:33:04 PST
We are no longer notified of the editor state change from WebPage::didChangeSelection(), the non mac code was removed in
r192834
.
Attachments
Patch
(1.58 KB, patch)
2015-12-01 01:35 PST
,
Carlos Garcia Campos
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2015-12-01 01:35:35 PST
Created
attachment 266347
[details]
Patch The fix is pretty obvious, but I'm assuming it was removed by mistake, so better get a review to be sure.
Carlos Garcia Campos
Comment 2
2015-12-01 09:40:50 PST
Committed
r192888
: <
http://trac.webkit.org/changeset/192888
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug