REGRESSION(r192834): [GTK] Test /webkit2/WebKitWebView/editor-state/typing-attributes times out after r192834 https://bugs.webkit.org/show_bug.cgi?id=151699

Reviewed by Tim Horton.

In r192834 the code to send EditorStateChanged message to the UI
process from WebPage::didChangeSelection was removed for non-mac
ports.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::didChangeSelection): Send EditorStateChanged
message to the UI process also for non-mac ports, as before r192834.

Canonical link: https://commits.webkit.org/169838@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@192888 268f45cc-cd09-0410-ab3c-d52691b4dbfc